# bloggo0

./: .env.example  .env.local.example  pyproject.toml
.codespeak/: build_insight.json  codespeak_state.json  external_apis.json  last_checkpoint_in_user_area.json  last_successful_checkpoint.json  methods_to_test.json  methods_to_test_raw.json  runs_history.json  sha_to_checkpoint.json  spec.processed.md  test_reports.txt
django_app/: signals.py  views.py
django_proj/: settings.py  urls.py
spec/: main.cs.md
templates/: base.html  home.html
tests/: test_signals.py  test_views.py
